Overflow fix

--- a/public/css/index.css
+++ b/public/css/index.css
@@ -287,7 +287,7 @@ button {
 .commands {
     background-color: var(--black);
     width: 80%;
-    height: 20vh;
+    max-height: 30vh;
     padding: 1em;
     border-radius: 1em;
     display: flex;
@@ -308,6 +308,7 @@ button {
     grid-template-columns: repeat(3, 30%);
     gap: 1em;
     max-height: 10em;
+    height: 100%;
     overflow-y: scroll;
 }
 
